--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 Напишите мне в Telegram или на почту. Опишите задачу, и я пришлю примеры аналогичных работ и расчет стоимости.
                 </p>
                 <div class="resume-main_icons">
-                    <a href="@syzdy_ae"> <img src="/image/icons8-телеграм-50.png" alt="Tg" class="resume-main_icons tg" > </a>
+                    <a href="https://t.me/syzdy_ae"> <img src="/image/icons8-телеграм-50.png" alt="Tg" class="resume-main_icons tg" > </a>
                     <a href="https://vk.ru/aesyz"> <img src="/image/icons8-vk-50.png" alt="Vk" class="resume-main_icons vk" > </a>
                     <a href="https://www.instagram.com/ae.syz?igsh=Z2FxdDF4azBvaGJp&utm_source=qr"> <img src="/image/icons8-instagram-50.png" alt="inst" class="resume-main_icons inst" > </a>
                 </div>
